Fix snap mode status field height so it doesn't overflow status bar area. (#1145)
* Cleanup statusbar styling to ensure items are centered and do not overflow area.

* Fix statusbar overflow panel z-index to show footer popups on top.

--- a/ui/framework/src/ui-framework/statusbar/OverflowPanel.scss
+++ b/ui/framework/src/ui-framework/statusbar/OverflowPanel.scss
@@ -7,9 +7,15 @@
 .uifw-statusbar-panel {
   background: $buic-background-1;
   padding: 0.5em;
+  &.core-popup.core-popup-top {
+    @include uicore-z-index(status-overflow-popup);
+  }
 }
 
 .uifw-statusbar-overflow-items-container {
   display: flex;
   flex-direction: column;
+  > .nz-footer-separator {
+    display: none;
+  }
 }
